fix unit tests on premature file closing in linux